# my_format

./: CMakeLists.txt  Dockerfile  Makefile  README.md
include/: my_format.hpp
src/: main.cpp
